--- a/SharpHtml/SharpHtml.csproj
+++ b/SharpHtml/SharpHtml.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Helpers\StringList.cs" />
     <Compile Include="src\Pages\BasicHtml.cs" />
     <Compile Include="src\Extensions\Css\CssExtensions.cs">
       <AutoGen>True</AutoGen>
@@ -69,7 +70,8 @@
     <Compile Include="src\Interfaces\IStyles.cs" />
     <Compile Include="src\Layouts\FixedSidebarLayout.cs" />
     <Compile Include="src\Layouts\SidebarLayout.cs" />
-    <Compile Include="src\Pages\SimpleHtml.cs" />
+    <Compile Include="src\Pages\ExtensiblePage.cs" />
+    <Compile Include="src\Pages\SimplePage.cs" />
     <Compile Include="src\TableTemplate\ActiveTableTemplate.cs" />
     <Compile Include="src\TableTemplate\TableTemplateBase.cs" />
     <Compile Include="src\Tags\Html\Body\Body.cs" />
