--- a/SharpHtml/SharpHtml.csproj
+++ b/SharpHtml/SharpHtml.csproj
@@ -43,11 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Extensions\Css\CssColors.cs" />
     <Compile Include="src\Extensions\Page\PageAndLayoutExtensions.cs" />
     <Compile Include="src\Helpers\Expando\Expando.cs" />
     <Compile Include="src\Helpers\Expando\PropertyBag.cs" />
+    <Compile Include="src\Helpers\KVPList.cs" />
     <Compile Include="src\Helpers\ReflectionExtensions.cs" />
     <Compile Include="src\Helpers\StringList.cs" />
+    <Compile Include="src\Helpers\Stylesheet.cs" />
     <Compile Include="src\Interfaces\ILayout.cs" />
     <Compile Include="src\Pages\BasicHtml.cs" />
     <Compile Include="src\Extensions\Css\CssExtensions.cs">
@@ -241,7 +244,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Helpers\StyleSheet.cs" />
     <Content Include="src\Tags\Others\OtherTags.txt">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
